fix(block): correct dark mode colors

--- a/tegel/src/components/block/block-theme-vars.scss
+++ b/tegel/src/components/block/block-theme-vars.scss
@@ -25,7 +25,7 @@
   --sdds-block-background-primary: var(--sdds-grey-900);
   --sdds-block-background-nested-primary: var(--sdds-grey-868);
   --sdds-block-background-secondary: var(--sdds-grey-868);
-  --sdds-block-background-nested-secondary: var(--sdds-grey-846);
+  --sdds-block-background-nested-secondary: var(--sdds-grey-900);
 
   --sdds-block-background: var(--sdds-block-background-primary);
   --sdds-block-background-nested: var(--sdds-block-background-nested-primary);
